Closed
Bug 1645486
Opened 5 years ago
Closed 5 years ago
Assertion failure: IsOnTRRThread(), at netwerk/dns/TRRService.cpp:926
Categories
(Core :: Networking: DNS, defect, P2)
Core
Networking: DNS
Tracking
()
RESOLVED
FIXED
mozilla79
Tracking | Status | |
---|---|---|
firefox79 | --- | fixed |
People
(Reporter: kershaw, Assigned: kershaw)
Details
(Whiteboard: [necko-triaged])
Attachments
(1 file)
These two assertions are error prone.
Imagine the steps below.
- When
network_trr_fetch_off_main_thread
is true, we dispatch aTRR
request to TRR background thread. network_trr_fetch_off_main_thread
is changed to false.- The
TRR
request in step 1 is completed andTRRService::CompleteLookup
is called on TRR background thread. - We hit the assertion.
Assignee | ||
Comment 1•5 years ago
|
||
Assignee | ||
Comment 2•5 years ago
|
||
Review ping for https://phabricator.services.mozilla.com/D79537.
Thanks.
Flags: needinfo?(valentin.gosu)
Updated•5 years ago
|
Flags: needinfo?(valentin.gosu)
Pushed by kjang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/ab8a3004dd66
The TRR thread assertions should not depend on network_trr_fetch_off_main_thread pref r=valentin
Comment 4•5 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox79:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla79
You need to log in
before you can comment on or make changes to this bug.
Description
•