Bug 1645486 - The TRR thread assertions should not depend on network_trr_fetch_off_main_thread pref r=valentin

Differential Revision: https://phabricator.services.mozilla.com/D79537