netwerk/dns/TRR.cpp
@@ -23,6 +23,7 @@
 #include "nsURLHelper.h"
 #include "TRR.h"
 #include "TRRService.h"
+#include "TRRServiceChannel.h"
 #include "TRRLoadInfo.h"
 
 #include "mozilla/Base64.h"
@@ -161,13 +162,9 @@ nsresult TRR::DohEncode(nsCString& aBody, bool aDisableECS) {
 
 NS_IMETHODIMP
 TRR::Run() {
-  MOZ_ASSERT_IF(gTRRService &&
-                    StaticPrefs::network_trr_fetch_off_main_thread() &&
-                    !XRE_IsSocketProcess(),
-                gTRRService->IsOnTRRThread());
-  MOZ_ASSERT_IF(!StaticPrefs::network_trr_fetch_off_main_thread() ||
-                    XRE_IsSocketProcess(),
-                NS_IsMainThread());
+  MOZ_ASSERT_IF(XRE_IsParentProcess() && gTRRService,
+                NS_IsMainThread() || gTRRService->IsOnTRRThread());
+  MOZ_ASSERT_IF(XRE_IsSocketProcess(), NS_IsMainThread());
 
   if ((gTRRService == nullptr) || NS_FAILED(SendHTTPRequest())) {
     FailData(NS_ERROR_FAILURE);
@@ -1483,8 +1480,8 @@ class ProxyCancel : public Runnable {
 };
 
 void TRR::Cancel() {
-  if (StaticPrefs::network_trr_fetch_off_main_thread() &&
-      !XRE_IsSocketProcess()) {
+  RefPtr<TRRServiceChannel> trrServiceChannel = do_QueryObject(mChannel);
+  if (trrServiceChannel && !XRE_IsSocketProcess()) {
     if (gTRRService) {
       nsCOMPtr<nsIThread> thread = gTRRService->TRRThread();
       if (thread && !thread->IsOnCurrentThread()) {
