netwerk/dns/TRRService.cpp
@@ -899,12 +899,8 @@ TRRService::Notify(nsITimer* aTimer) {
 }
 
 void TRRService::TRRIsOkay(enum TrrOkay aReason) {
-  MOZ_ASSERT_IF(StaticPrefs::network_trr_fetch_off_main_thread() &&
-                    !XRE_IsSocketProcess(),
-                IsOnTRRThread());
-  MOZ_ASSERT_IF(!StaticPrefs::network_trr_fetch_off_main_thread() ||
-                    XRE_IsSocketProcess(),
-                NS_IsMainThread());
+  MOZ_ASSERT_IF(XRE_IsParentProcess(), NS_IsMainThread() || IsOnTRRThread());
+  MOZ_ASSERT_IF(XRE_IsSocketProcess(), NS_IsMainThread());
 
   Telemetry::AccumulateCategoricalKeyed(
       AutoDetectedKey(),
@@ -934,12 +930,8 @@ AHostResolver::LookupStatus TRRService::CompleteLookup(
     const nsACString& aOriginSuffix) {
   // this is an NS check for the TRR blacklist or confirmationNS check
 
-  MOZ_ASSERT_IF(StaticPrefs::network_trr_fetch_off_main_thread() &&
-                    !XRE_IsSocketProcess(),
-                IsOnTRRThread());
-  MOZ_ASSERT_IF(!StaticPrefs::network_trr_fetch_off_main_thread() ||
-                    XRE_IsSocketProcess(),
-                NS_IsMainThread());
+  MOZ_ASSERT_IF(XRE_IsParentProcess(), NS_IsMainThread() || IsOnTRRThread());
+  MOZ_ASSERT_IF(XRE_IsSocketProcess(), NS_IsMainThread());
   MOZ_ASSERT(!rec);
 
   RefPtr<AddrInfo> newRRSet(aNewRRSet);
